# candle-aesthetic-predictor

./: Cargo.toml  README.md
src/: aesthetic_predictor_conv.rs  aesthetic_predictor_simple.rs  error.rs  lib.rs  main.rs  resize_wrapper.rs  squeeze_excitation.rs
src/latent/: image.rs  mod.rs  vae.rs
src/model/: aesthetic_predictor_conv.rs  mod.rs
